--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -87,7 +87,9 @@
 			<div class="row">
 				<div class="col-md-6" ng-repeat="rc in receiverList">
 					<div style="text-align: center; margin-bottom: 10px;">
-						<span class="badge" style="background-color: #337ab7; font-size: 16px; padding: 5px 50px 5px 50px;">{{ rc.receiverName }}</span>
+						<span class="badge" style="background-color: #337ab7; font-size: 16px; padding: 5px 50px 5px 50px; cursor: pointer;" ng-click="changeReceiver(rc)">
+						{{ rc.receiverName }}
+						</span>
 					</div>
 					<div ng-include="'./views/manageOrder/orderGroup.html'"></div>
 				</div>
